* 0.5.4
	- Add message signer cli
* 0.5.3
	- Upgrade RLP to 3.0.0 (eliminates really annoying cytoolz warning on stdout)
---

changelog before 0.5.3 will be written later, sorry